--- a/package.json
+++ b/package.json
@@ -85,5 +85,8 @@
       "eslint --fix"
     ]
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@stencil/router": "^1.0.1"
+  }
 }
