--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@semantic-release/github": "^11.0.4",
     "@semantic-release/npm": "^12.0.2",
     "@stencil/core": "^4.27.1",
+    "@stencil/react-output-target": "^1.2.0",
     "@stencil/sass": "^3.2.1",
     "@storybook/addon-a11y": "^9.0.16",
     "@storybook/addon-docs": "^9.0.16",
